--- a/css/styles.css
+++ b/css/styles.css
@@ -496,6 +496,11 @@ progress {
   display: none !important;
 }
 
+.span-bar{
+  display:inline; 
+  white-space:pre;
+}
+
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
@@ -5033,14 +5038,14 @@ textarea.form-control-lg {
 }
 
 .progress-bar {
-  display: flex;
-  flex-direction: column;
+  margin-left: 1rem;
   justify-content: center;
   overflow: hidden;
   color: #fff;
   text-align: center;
   white-space: nowrap;
   background-color: #bd5d38;
+  border-radius: 15px;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
