--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,9 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h1, .h1 {
   color: var(--bs-m);
 }
 
-
+td span{
+  color: #005807;
+}
 h1, .h1 {
   font-size: calc(1.725rem + 5.7vw);
 }
@@ -5037,14 +5039,17 @@ textarea.form-control-lg {
   border-radius: 0.25rem;
 }
 
+progress::-moz-progress-bar {
+  background: var(--bs-primary);
+}
+
 .progress-bar {
   margin-left: 1rem;
   justify-content: center;
   overflow: hidden;
-  color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #bd5d38;
+  background-color: #334234;
   border-radius: 15px;
   transition: width 0.6s ease;
 }
