--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,46 @@ summary {
   vertical-align: text-bottom;
 }
 
-.itchioImage:hover{
+.img__wrap {
+  position: relative;
+  display: inline-block;
+}
+.img__description_layer {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: rgb(0, 0, 0);
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  justify-content: center;
+  margin-left: 1rem;
+  margin-right: 1rem;
+
+  /* transition effect. not necessary */
+  transition: opacity .2s, visibility .2s;
+}
+
+.img__wrap:hover .img__description_layer {
+  visibility: visible;
+  opacity: 1;
+}
+
+.img__description {
+  transition: .2s;
+  transform: translateY(1em);
+  text-align: center;
+}
+
+.img__wrap:hover .img__description {
+  transform: translateY(0);
+}
+
+.img__wrap:hover .itchioImage{
   filter: invert(0.4);
   background-color: rgb(102.4, 102.4, 102.4);
   border: 2px solid white;
